# nexus-beacon-receiver

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yaml  schema.sql  wrangler.toml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-version.yml  ci.yml  deps-monitor.yml
docs/: ARCHITECTURE.md  CLIENT-TYPES.md  IMPLEMENTATION-PLAN.md  MASTER-PLAN.md  NEXUS-CHANGES.md  PROBLEM-STATEMENT.md  WORKER-DESIGN.md
scripts/: auto-version.sh  bump-version.sh  increment-version.sh  integration-test.sh  setup-hooks.sh
scripts/hooks/: commit-msg  post-commit  pre-commit  pre-push
src/: config.rs  lib.rs
src/adapters/: d1_repository.rs  handlers.rs  mod.rs  worker_auth.rs  worker_cors.rs
src/domain/: aggregation.rs  cors.rs  mod.rs  ports.rs  rate_limit.rs  security.rs  services.rs  types.rs  validation.rs
src/domain/snapshots/: nexus_beacon_receiver__domain__types__tests__auth_error_display_snapshot.snap  nexus_beacon_receiver__domain__types__tests__beacon_result_variants_snapshot.snap  nexus_beacon_receiver__domain__types__tests__error_response_snapshot.snap  nexus_beacon_receiver__domain__types__tests__repository_error_display_snapshot.snap  nexus_beacon_receiver__domain__types__tests__shield_response_snapshot.snap  nexus_beacon_receiver__domain__types__tests__stats_response_snapshot.snap  nexus_beacon_receiver__domain__types__tests__summary_response_snapshot.snap
src/infrastructure/: mod.rs  router.rs
