[package]
name = "nexus-beacon-receiver"
version = "0.1.1"
edition = "2021"
authors = ["enerBydev <rjmemdoza.s@gmail.com>"]
description = "NEXUS global telemetry receiver — Cloudflare Worker (Rust/WASM)"
license = "MIT"
repository = "https://github.com/enerBydev/nexus-beacon-receiver"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.8", features = ["d1"] }
worker-sys = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "s"
lto = true