[package]
name = "nexus-beacon-receiver"
version = "0.4.0"
edition = "2021"
authors = ["enerBydev <rjmemdoza.s@gmail.com>"]
description = "NEXUS global telemetry receiver — Cloudflare Worker (Rust/WASM)"
license = "MIT"
repository = "https://github.com/enerBydev/nexus-beacon-receiver"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.8", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true

[dev-dependencies]
proptest = "1"
mockall = "0.13"
tokio = { version = "1", features = ["rt", "macros"] }
fake = "3"
insta = { version = "1", features = ["json"] }